--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "lodash": "^4.17.21",
         "next": "14.2.5",
         "next-auth": "^4.24.7",
+        "next-intl": "^3.25.1",
         "nodemailer": "^6.9.14",
         "pdfjs-dist": "^4.6.82",
         "postcss": "^8.4.45",
@@ -56,6 +57,7 @@
         "react-lazyload": "^3.2.1",
         "react-phone-number-input": "^3.4.5",
         "react-quill": "^2.0.0",
+        "react-world-flags": "^1.6.0",
         "reflect-metadata": "^0.2.2",
         "socket.io": "^4.8.0",
         "socket.io-client": "^4.8.0",
@@ -77,6 +79,7 @@
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@types/react-slick": "^0.23.13",
+        "@types/react-world-flags": "^1.6.0",
         "@types/reflect-metadata": "^0.1.0",
         "eslint": "^9.12.0",
         "eslint-config-next": "14.2.5",
