feat sign in to keycloak

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "@typescript-eslint/no-explicit-any": false
-  }
+    "extends": "next/core-web-vitals",
+    "rules": {
+        "@typescript-eslint/no-explicit-any": false,
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            { "argsIgnorePattern": "^_" }
+        ]
+    }
 }
