--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "color-thief-browser": "^2.0.2",
         "country-state-city": "^3.2.1",
         "crypto-js": "^4.2.0",
+        "cryptr": "^6.3.0",
         "dayjs": "^1.11.13",
         "firebase": "^10.13.0",
         "formik": "^2.4.6",
@@ -39,10 +40,11 @@
         "generate-password": "^1.7.1",
         "inversify": "^6.0.2",
         "jsonwebtoken": "^9.0.2",
+        "jwt-decode": "^4.0.0",
         "keen-slider": "^6.8.6",
         "lodash": "^4.17.21",
         "next": "14.2.5",
-        "next-auth": "^4.24.7",
+        "next-auth": "^4.24.10",
         "next-intl": "^3.25.1",
         "nodemailer": "^6.9.14",
         "pdfjs-dist": "^4.6.82",
